// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot other users Profile 1`] = `
.c0 {
  color: #0000ff;
}

<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "flex-start",
      "WebkitBoxAlign": "start",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "start",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "flex-start",
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": "2.8rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "2.8rem",
      "msFlexAlign": "start",
      "msFlexDirection": "row",
      "msFlexPack": "start",
      "position": "relative",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <a
      className="c0 ulink-mock"
      href="/user/profile/alice"
      hu={0}
      inline={0}
      onClick={[Function]}
      styles=""
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "borderBottomLeftRadius": "3.15rem",
            "borderBottomRightRadius": "3.15rem",
            "borderTopLeftRadius": "3.15rem",
            "borderTopRightRadius": "3.15rem",
            "display": "flex",
            "flexBasis": "auto",
            "height": "6.3rem",
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "position": "relative",
            "width": "6.3rem",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"alice-pic.jpg\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="alice-pic.jpg"
        />
      </div>
    </a>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitBoxLines": "multiple",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitFlexWrap": "wrap",
        "display": "flex",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "marginLeft": "1.4rem",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexWrap": "wrap",
        "position": "relative",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "baseline",
          "WebkitBoxAlign": "baseline",
          "WebkitBoxDirection": "normal",
          "WebkitBoxLines": "multiple",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitFlexWrap": "wrap",
          "WebkitJustifyContent": "space-between",
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "msFlexAlign": "baseline",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "msFlexWrap": "wrap",
          "position": "relative",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxLines": "multiple",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitFlexWrap": "wrap",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "flexWrap": "wrap",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexWrap": "wrap",
            "position": "relative",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          mr="1.4rem"
          style={
            Object {
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "fontFamily": "HelveticaNeue-Bold",
              "fontSize": "2.1rem",
              "lineHeight": "2.8rem",
              "marginRight": "1.4rem",
              "position": "relative",
            }
          }
        >
          Alice
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "marginRight": "1.4rem",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "position": "relative",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "bottom": "-1px",
                "display": "flex",
                "flexBasis": "auto",
                "height": "1.225rem",
                "marginRight": "0.12249999999999998rem",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
                "width": "1.225rem",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"r-emoji.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="r-emoji.png"
            />
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            inline={0}
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "lineHeight": "1.6333333333333333rem",
                "position": "relative",
              }
            }
          >
            11
          </div>
        </div>
        <div
          align="baseline"
          className="css-text-901oao"
          dir="auto"
          mr={2}
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "alignItems": "baseline",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "fontFamily": "HelveticaNeue-CondensedBold",
              "fontSize": "1.225rem",
              "lineHeight": "1.6333333333333333rem",
              "marginRight": "1.4rem",
              "msFlexAlign": "baseline",
              "position": "relative",
            }
          }
          user={
            Object {
              "_id": "a00000000000000000000000",
              "balance": 111,
              "bio": "hi i'm alice!",
              "email": "alice@alice.com",
              "ethAddress": Array [
                "0x627306090abaB3A6e1400e9345bC60c78a8BEf57",
              ],
              "handle": "alice",
              "image": "alice-pic.jpg",
              "lockedTokens": 0,
              "name": "Alice",
              "password": "test",
              "relevance": Object {
                "pagerank": 11,
              },
            }
          }
        >
          <span
            c="#7ED321"
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            fs={1.75}
            style={
              Object {
                "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
                "color": "rgba(126,211,33,1.00)",
                "display": "flex",
                "fontSize": "1.225rem",
                "position": "relative",
                "textDecorationColor": "rgba(126,211,33,1.00)",
              }
            }
          >
            ▲ 
          </span>
          0
          %
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "marginRight": "1.05rem",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "position": "relative",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "bottom": "-1px",
                "display": "flex",
                "flexBasis": "auto",
                "height": "1.225rem",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
                "width": "1.2862500000000001rem",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"relevantcoin.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="relevantcoin.png"
            />
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            inline={0}
            ml={0.4375}
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "lineHeight": "1.6333333333333333rem",
                "marginLeft": "0.30625rem",
                "position": "relative",
              }
            }
          >
            
            111
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "display": "flex",
            "position": "relative",
          }
        }
      />
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "display": "flex",
          "marginTop": "1.4rem",
          "position": "relative",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "position": "relative",
          }
        }
      >
        <span>
          hi i'm alice!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot own Profile 1`] = `
.c0 {
  color: #0000ff;
}

.c1 {
  color: #0000ff;
  color: #0000ff;
}

.c2 {
  font-size: 1.05rem;
  line-height: 1.4rem;
  font-family: HelveticaNeue-Medium;
  color: #999999;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000000;
  -webkit-text-decoration-color: #000000;
  text-decoration-color: #000000;
  color: #0000ff;
  color: #000000;
  -webkit-text-decoration-color: #000000;
  text-decoration-color: #000000;
}

.c2:hover * {
  color: #999999;
}

.c2:hover * {
  fill: #999999;
}

.c2:hover * {
  color: #999999;
}

<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitAlignItems": "flex-start",
      "WebkitBoxAlign": "start",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "start",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "flex-start",
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": "2.8rem",
      "marginLeft": "2.8rem",
      "marginRight": "2.8rem",
      "marginTop": "2.8rem",
      "msFlexAlign": "start",
      "msFlexDirection": "row",
      "msFlexPack": "start",
      "position": "relative",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <a
      className="c0 ulink-mock"
      href="/user/profile/alice"
      hu={0}
      inline={0}
      onClick={[Function]}
      styles=""
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "borderBottomLeftRadius": "3.15rem",
            "borderBottomRightRadius": "3.15rem",
            "borderTopLeftRadius": "3.15rem",
            "borderTopRightRadius": "3.15rem",
            "display": "flex",
            "flexBasis": "auto",
            "height": "6.3rem",
            "msFlexPreferredSize": "auto",
            "overflowX": "hidden",
            "overflowY": "hidden",
            "position": "relative",
            "width": "6.3rem",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "backgroundImage": "url(\\"alice-pic.jpg\\")",
              "backgroundPosition": "center",
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "cover",
              "bottom": "0px",
              "height": "100%",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
              "width": "100%",
              "zIndex": -1,
            }
          }
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          src="alice-pic.jpg"
        />
      </div>
    </a>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitBoxLines": "multiple",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitFlexWrap": "wrap",
        "display": "flex",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "marginLeft": "1.4rem",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexWrap": "wrap",
        "position": "relative",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "baseline",
          "WebkitBoxAlign": "baseline",
          "WebkitBoxDirection": "normal",
          "WebkitBoxLines": "multiple",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitFlexWrap": "wrap",
          "WebkitJustifyContent": "space-between",
          "alignItems": "baseline",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "msFlexAlign": "baseline",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
          "msFlexWrap": "wrap",
          "position": "relative",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxLines": "multiple",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitFlexWrap": "wrap",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "flexWrap": "wrap",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexWrap": "wrap",
            "position": "relative",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          mr="1.4rem"
          style={
            Object {
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "fontFamily": "HelveticaNeue-Bold",
              "fontSize": "2.1rem",
              "lineHeight": "2.8rem",
              "marginRight": "1.4rem",
              "position": "relative",
            }
          }
        >
          Alice
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "marginRight": "1.4rem",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "position": "relative",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "bottom": "-1px",
                "display": "flex",
                "flexBasis": "auto",
                "height": "1.225rem",
                "marginRight": "0.12249999999999998rem",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
                "width": "1.225rem",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"r-emoji.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="r-emoji.png"
            />
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            inline={0}
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "lineHeight": "1.6333333333333333rem",
                "position": "relative",
              }
            }
          >
            11
          </div>
        </div>
        <div
          align="baseline"
          className="css-text-901oao"
          dir="auto"
          mr={2}
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "alignItems": "baseline",
              "color": "rgba(0,0,0,1.00)",
              "display": "flex",
              "fontFamily": "HelveticaNeue-CondensedBold",
              "fontSize": "1.225rem",
              "lineHeight": "1.6333333333333333rem",
              "marginRight": "1.4rem",
              "msFlexAlign": "baseline",
              "position": "relative",
            }
          }
          user={
            Object {
              "_id": "a00000000000000000000000",
              "balance": 111,
              "bio": "hi i'm alice!",
              "email": "alice@alice.com",
              "ethAddress": Array [
                "0x627306090abaB3A6e1400e9345bC60c78a8BEf57",
              ],
              "handle": "alice",
              "image": "alice-pic.jpg",
              "lockedTokens": 0,
              "name": "Alice",
              "password": "test",
              "relevance": Object {
                "pagerank": 11,
              },
            }
          }
        >
          <span
            c="#7ED321"
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            fs={1.75}
            style={
              Object {
                "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
                "color": "rgba(126,211,33,1.00)",
                "display": "flex",
                "fontSize": "1.225rem",
                "position": "relative",
                "textDecorationColor": "rgba(126,211,33,1.00)",
              }
            }
          >
            ▲ 
          </span>
          0
          %
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "marginRight": "1.05rem",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
              "position": "relative",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "bottom": "-1px",
                "display": "flex",
                "flexBasis": "auto",
                "height": "1.225rem",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "position": "relative",
                "width": "1.2862500000000001rem",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"relevantcoin.png\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "contain",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="relevantcoin.png"
            />
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            inline={0}
            ml={0.4375}
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "HelveticaNeue-CondensedBold",
                "fontSize": "1.225rem",
                "lineHeight": "1.6333333333333333rem",
                "marginLeft": "0.30625rem",
                "position": "relative",
              }
            }
          >
            
            111
          </div>
        </div>
      </div>
      <a
        className="c1 ulink-mock"
        color="#0000ff"
        href="/"
        hu={0}
        inline={0}
        onClick={[Function]}
        styles=""
      >
        Logout
      </a>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "display": "flex",
          "marginTop": "1.4rem",
          "position": "relative",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "display": "flex",
            "fontFamily": "HelveticaNeue",
            "fontSize": "1.225rem",
            "lineHeight": "1.6333333333333333rem",
            "position": "relative",
          }
        }
      >
        <span>
          hi i'm alice!
        </span>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "marginTop": "1.4rem",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "position": "relative",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        mr="0.35rem"
        style={
          Object {
            "WebkitTextDecorationColor": "rgba(0,0,0,1.00)",
            "WebkitTextDecorationStyle": "solid",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "fontFamily": "HelveticaNeue-Medium",
            "fontSize": "1.05rem",
            "lineHeight": "1.4rem",
            "marginRight": "0.35rem",
            "position": "relative",
            "textDecoration": "underline",
            "textDecorationColor": "rgba(0,0,0,1.00)",
            "textDecorationStyle": "solid",
          }
        }
      >
        <a
          c="#000000"
          className="c2 ulink-mock"
          hc="#999999"
          href="//settings?redirect=/"
          hu={0}
          inline={0}
          onClick={[Function]}
          styles={
            Array [
              "font-size: 1.05rem;",
              "line-height: 1.4rem;",
              "font-family: HelveticaNeue-Medium;",
              "color: #999999;",
              "text-decoration: underline;",
              " ",
              [Function],
              ";",
              [Function],
              ";",
            ]
          }
        >
          <span
            align="center"
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            fdirection="row"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "position": "relative",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "display": "flex",
                  "marginRight": "0.35rem",
                  "position": "relative",
                }
              }
            >
              <svg
                bg="#999999"
                h="1.4rem"
                height="12"
                viewBox="0 0 12 12"
                w="1.4rem"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Shape
                </title>
                <path
                  d="M4.625.131l2.903.037-.018 1.41A4.79 4.79 0 0 1 9.265 2.61l1.243-.69 1.42 2.505-1.244.69c.14.674.127 1.363-.027 2.018l1.227.722-1.484 2.468-1.226-.721a4.805 4.805 0 0 1-1.78.987L7.373 12l-2.902-.036.018-1.411A4.788 4.788 0 0 1 2.735 9.52l-1.244.689-1.42-2.505 1.244-.689a4.676 4.676 0 0 1 .027-2.02l-1.225-.72L1.6 1.808l1.225.72a4.806 4.806 0 0 1 1.782-.988L4.625.131zm3.339 4.846a2.214 2.214 0 0 1-.864 3.03 2.265 2.265 0 0 1-3.064-.853 2.214 2.214 0 0 1 .863-3.031 2.265 2.265 0 0 1 3.065.854z"
                  fill="#000"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Settings
          </span>
        </a>
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        ml="0.35rem"
        mr="0.35rem"
        style={
          Object {
            "WebkitTextDecorationColor": "rgba(0,0,0,1.00)",
            "WebkitTextDecorationStyle": "solid",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "fontFamily": "HelveticaNeue-Medium",
            "fontSize": "1.05rem",
            "lineHeight": "1.4rem",
            "marginLeft": "0.35rem",
            "marginRight": "0.35rem",
            "position": "relative",
            "textDecoration": "underline",
            "textDecorationColor": "rgba(0,0,0,1.00)",
            "textDecorationStyle": "solid",
          }
        }
      >
        <a
          c="#000000"
          className="c2 ulink-mock"
          hc="#999999"
          href="/invites"
          hu={0}
          inline={0}
          onClick={[Function]}
          styles={
            Array [
              "font-size: 1.05rem;",
              "line-height: 1.4rem;",
              "font-family: HelveticaNeue-Medium;",
              "color: #999999;",
              "text-decoration: underline;",
              " ",
              [Function],
              ";",
              [Function],
              ";",
            ]
          }
        >
          <span
            align="center"
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            fdirection="row"
            ml="0.7rem"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginLeft": "0.7rem",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
                "position": "relative",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "display": "flex",
                  "marginRight": "0.35rem",
                  "position": "relative",
                }
              }
            >
              <svg
                bg="#999999"
                h="1.4rem"
                height="13"
                viewBox="0 0 15 13"
                w="1.4rem"
                width="15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Group 33
                </title>
                <g
                  fill="#000"
                  fillRule="evenodd"
                >
                  <path
                    d="M5.463 7.444c1.439 0 2.605-1.765 2.605-3.163-.035-1.373-1.19-2.469-2.604-2.469-1.413 0-2.568 1.096-2.604 2.469-.002 1.39 1.165 3.163 2.603 3.163zM7.867 7.743h-.134c-.63.788-1.433 1.222-2.27 1.222-.836 0-1.638-.426-2.27-1.222H3.06c-.813 0-1.592.314-2.166.874A2.933 2.933 0 0 0 0 10.725v1.837h10.927v-1.837a2.933 2.933 0 0 0-.894-2.108 3.105 3.105 0 0 0-2.166-.874zM12.868 2.115V.042h-1.773v2.073H8.963v1.724h2.132V5.91h1.773V3.84H15V2.115z"
                  />
                </g>
              </svg>
            </div>
            Invite Friend
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
